# clinic-bot-19pol

./: .env.example  .gitignore  .vercelignore  AGENTS_HISTORY.md  PROJECT_HISTORY.md  README.md  amvera.yml  get_by_vpn.py  live_log.txt  pyproject.toml  requirements.txt  run_log.txt  test.db  test_all_vpns.py  test_differ.py  test_qa.py  test_scrape.py
.github/workflows/: scraper.yml  test.yml  vercel-deploy.yml
Docs/: Idea.txt  PROJECT_HISTORY.md
alembic/: env.py
alembic/versions/: 9d2282ffdfda_initial.py  a5f38d7144d3_change_ticket_id_to_biginteger.py  bf38cdea9f4b_add_performance_indices.py
app/api/: admin.py  main.py
app/bot/: __init__.py  keyboards.py  main.py  notifier.py  state.py
app/bot/handlers/: base.py  subscription.py
app/core/: config.py  database.py
app/models/: __init__.py  models.py
app/scraper/: __init__.py  differ.py  parser.py  tasks.py  tasks_loop.py
app/templates/: dashboard.html
