[project]
name = "app"
version = "0.1.0"
dependencies = [
    "sqlalchemy[asyncio]",
    "psycopg[binary]",
    "alembic",
    "pydantic-settings",
    "redis",
    "aiogram",
    "fastapi",
    "uvicorn",
    "sqladmin>=0.16.1",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
]
requires-python = "~=3.12.0"
